# inertia

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
inertia/: __init__.py  __main__.py  cli.py
inertia/nucleo/: __init__.py  calibrador.py  limitador.py  modelos.py  resolucao.py  scanner.py
inertia/relatorios/: __init__.py  exportador.py
inertia/ui/: __init__.py  demo.py  terminal.py
inertia/utils/: __init__.py  portas.py  servicos.py
scripts/: compilar.ps1
src/: lib.rs
testes/: teste_utils.py
